# satellite-approximation

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanfile.py  conaninfo.txt  pyproject.toml
data/: B08.tif  cloud_mask.tif
data/poisson_filling_results/: licenses.md
executables/: CMakeLists.txt  laplace-main.cpp  main-analysis.cpp  main-cloud-detection.cpp  main-spatial-approximation.cpp  main.cpp  poisson-main.cpp
lib/: CMakeLists.txt  test.cpp
lib/analysis/: CMakeLists.txt
lib/analysis/include/analysis/: db.h  filters.h  forward.h  noCopying.h  noise.h  sis.h  temporal.h  utils.h
lib/analysis/source/: db.cpp  filters.cpp  noise.cpp  sis.cpp  temporal.cpp  utils.cpp
lib/approx/: CMakeLists.txt
lib/approx/include/approx/: db.h  laplace.h  poisson.h  results.h  utils.h
lib/approx/source/: approx.cpp  db.cpp  laplace.cpp  poisson.cpp  results.cpp  utils.cpp
lib/cloud_shadow_detection/: CMakeLists.txt
lib/cloud_shadow_detection/include/cloud_shadow_detection/: CloudMask.h  CloudShadowMatching.h  ComputeEnvironment.h  Functions.h  GaussianBlur.h  ImageOperations.h  Imageio.h  PitFillAlgorithm.h  PotentialShadowMask.h  ProbabilityRefinement.h  SceneClassificationLayer.h  ShadowMaskEvaluation.h  VectorGridOperations.h  automatic_detection.h  db.h  fmt_filesystem.h  temporal.h  types.h
lib/cloud_shadow_detection/source/: CloudMask.cpp  CloudShadowMatching.cpp  ComputeEnvironment.cpp  Functions.cpp  GaussianBlur.cpp  ImageOperations.cpp  Imageio.cpp  PitFillAlgorithm.cpp  PotentialShadowMask.cpp  ProbabilityRefinement.cpp  SceneClassificationLayer.cpp  ShadowMaskEvaluation.cpp  VectorGridOperations.cpp  automatic_detection.cpp  db.cpp  temporal.cpp  types.cpp
lib/include/cloud_shadow_detection/: types.h
lib/pylib/: download_data.py  pyproject.toml
lib/source/: CloudMask.cpp  CloudShadowMatching.cpp  Functions.cpp  GaussianBlur.cpp  Imageio.cpp  PitFillAlgorithm.cpp  ProbabilityRefinement.cpp  SceneClassificationLayer.cpp  ShadowMaskEvaluation.cpp  types.h
lib/spatial_approximation/: CMakeLists.txt
lib/spatial_approximation/include/spatial_approximation/: approx.h  results.h
lib/spatial_approximation/source/: approx.cpp  results.cpp
lib/utils/: CMakeLists.txt
lib/utils/include/utils/: date.h  db.h  dbg.h  eigen.h  error.h  filesystem.h  geotiff.h  indices.h  log.h  noCopying.h  types.h
lib/utils/source/: date.cpp  db.cpp  error.cpp  filesystem.cpp  geotiff.cpp  indices.cpp  log.cpp
notebooks/: cloud_mask_analysis.ipynb  cloud_masks.ipynb  comparing_results.ipynb  filesystem_cleaning.ipynb  flood_fill.ipynb  pyproject.toml  temporal.ipynb
notebooks/data/: config.ini  converted_data.xlsx  data.ipynb  downloader.py  frost_filter.py  sentinel1.ipynb
notebooks/opencv/: erosion_dialation.py
src/: detectCloudsShadows.cpp  detectCloudsShadows.h  main.cpp
src/satellite_approximation/: __init__.py
src/sentinel_cloud_detection/: __init__.py
src/sentinel_data_processing/: __init__.py
test_data/2019-05-22/: B02.tif  B03.tif  B04.tif  B08.tif  B11.tif  CLD.tif  CLP.tif  SCL.tif  sunAzimuthAngles.tif  sunZenithAngles.tif  viewAzimuthMean.tif  viewZenithMean.tif
tests/: approximation.h  main.cpp
