[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "sentinel_data_processing"
version = "0.0.1"
description="A minimal example package (with pybind11)"
requires-python = ">=3.7"

[tool.scikit-build]
cmake.args = ["-DCMAKE_TOOLCHAIN_FILE=conan/conan_toolchain.cmake"]
cmake.build-type = "Release"
