[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "satellite_approximation"
version = "0.0.1"
description="Tools for finding and approximating missing data in satellite imagery."
requires-python = ">=3.7"

[tool.scikit-build]
cmake.args = ["-DCMAKE_TOOLCHAIN_FILE=conan/conan_toolchain.cmake"]
cmake.build-type = "RelWithDebInfo"
