[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Erik Biederstadt <biederstadterik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
opencv-python = "^4.8.1.78"
numpy = "^1.26.0"
ipykernel = "^6.25.2"
rasterio = "^1.3.8.post1"
matplotlib = "^3.8.0"
bokeh = "^3.3.0"
palettable = "^3.3.3"
folium = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
