[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Erik Biederstadt <biederstadterik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
opencv-python = "^4.8.1.78"
numpy = "^1.26.0"
ipykernel = "^6.25.2"
rasterio = "^1.3.8.post1"
matplotlib = "^3.8.0"
bokeh = "^3.3.0"
palettable = "^3.3.3"
folium = "^0.14.0"
pandas = {extras = ["excel"], version = "^2.1.2"}
geopandas = {extras = ["folium", "mapclassify", "matplotlib"], version = "^0.14.0"}
mapclassify = "^2.6.1"
sentinelhub = "^3.9.2"
numba = "^0.58.1"
xarray = "^2023.10.1"
rioxarray = "^0.15.0"
scikit-image = "^0.22.0"
ipympl = "^0.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
